n8n/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: n8n-ingress
  namespace: automation
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
#    nginx.ingress.kubernetes.io/auth-url: http://ak-outpost-authentik-embedded-outpost.sso.svc.cluster.local:9000/outpost.goauthentik.io/auth/nginx
#    nginx.ingress.kubernetes.io/auth-signin: https://n8n.secyour.space/outpost.goauthentik.io/start?rd=$scheme://$http_host$escaped_request_uri
#    nginx.ingress.kubernetes.io/auth-response-headers: Set-Cookie,X-authentik-username,X-authentik-groups,X-authentik-entitlements,X-authentik-email,X-authentik-name,X-authentik-uid
#    nginx.ingress.kubernetes.io/auth-snippet: |
#      proxy_set_header X-Forwarded-Host $http_host;
spec:
  ingressClassName: nginx
  rules:
    - host: n8n.secyour.space
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: n8n
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authentik-outpost-ingress-n8n
  namespace: sso
spec:
  ingressClassName: nginx
  rules:
    - host: n8n.secyour.space
      http:
        paths:
          - path: /outpost.goauthentik.io
            pathType: Prefix
            backend:
              service:
                name: ak-outpost-authentik-embedded-outpost
                port:
                  number: 9000
